--- a/web/app/translations/en.po
+++ b/web/app/translations/en.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: QuickPanel\n"
-"POT-Creation-Date: 2016-12-29 09:45+0100\n"
-"PO-Revision-Date: 2016-12-29 09:45+0100\n"
+"POT-Creation-Date: 2016-12-29 18:58+0100\n"
+"PO-Revision-Date: 2016-12-29 18:58+0100\n"
 "Last-Translator: Erik Novacek, DATRON-TECHNOLOGY s.r.o. <enovacek@datron."
 "sk>\n"
 "Language-Team: \n"
@@ -15,6 +15,18 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-SearchPath-0: .\n"
+
+#: js/app-init.js:48
+msgid "Circular hole"
+msgstr "Circular hole"
+
+#: js/app-init.js:49
+msgid "Rectangular hole"
+msgstr "Rectangular hole"
+
+#: js/app-init.js:50
+msgid "Marker tool"
+msgstr "Marker tool"
 
 #: js/app.js:105
 msgid "%1 objects"
@@ -72,17 +84,66 @@ msgstr "Red"
 msgid "circ.hole"
 msgstr "Circular hole"
 
+#: js/cHoleCirc.js:134
+msgid "qp_diameter"
+msgstr "Diameter"
+
+#: js/cHoleCirc.js:136 js/cHoleRect.js:231
+msgid "qp_depth"
+msgstr "Depth"
+
+#: js/cHoleCirc.js:137 js/cHoleRect.js:233
+msgid "qp_posx"
+msgstr "X position"
+
+#: js/cHoleCirc.js:138 js/cHoleRect.js:234
+msgid "qp_posy"
+msgstr "Y position"
+
 #: js/cHoleRect.js:4
 msgid "rect.hole"
-msgstr ""
+msgstr "Rectangular hole"
+
+#: js/cHoleRect.js:221 js/cPanel.js:112
+msgid "qp_width"
+msgstr "Width"
+
+#: js/cHoleRect.js:225 js/cPanel.js:116
+msgid "qp_height"
+msgstr "Height"
+
+#: js/cHoleRect.js:229 js/cPanel.js:126
+msgid "qp_r1"
+msgstr "Corner radius"
+
+#: js/cHoleRect.js:232
+msgid "qp_angle"
+msgstr "Rotation angle"
 
 #: js/cPanel.js:4
 msgid "panel"
-msgstr ""
+msgstr "Panel"
 
-#: js/prototypes.js:133
+#: js/cPanel.js:122
+msgid "qp_thickness"
+msgstr "Thickness"
+
+#: js/cPanel.js:134
+msgid "qp_surfcolor"
+msgstr "Surface color"
+
+#: js/prototypes.js:132
 msgid "Value %1=%2 is out of range."
-msgstr ""
+msgstr "Value is out of range: %1=%2"
+
+#~ msgid "Circular"
+#~ msgstr "Circular hole"
+
+#~ msgid "Rectangular"
+#~ msgstr "Rectangular hole"
+
+#~ msgid "Marker"
+#~ msgstr "Marker tool"
 
 #~ msgid "circ_hole"
 #~ msgstr "Circ.hole"
